proj1/tests/other-tests/oskis-angels_tests/correct/loops-for-multiline.py
for x in range(1, 4):
    x
    5
    print x
